--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Pomodoro</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div class="text">
+      <h1>Tamatim 🍅 Timer</h1>
+      <p>Welcome to your Electron application.</p>
+      <button id="start">Start</button>
+    </div>
   </body>
 </html>
